# glowfish

./: Cargo.toml
.cargo/: config.toml
cozy-chess/: Cargo.toml
cozy-chess/src/: moves.rs
cozy-chess/src/board/: mod.rs
glowfish/: Cargo.toml  book.txt  build.rs
glowfish/src/: game.rs  lib.rs  rng.rs  sounds.rs  sprites.rs
glowfish/src/engine/: mod.rs
glowfish/src/engine/eval/: eval_consts.rs  mob.rs  mod.rs  phased_eval.rs  pst.rs
glowfish/src/wasm4/: mod.rs  sys.rs
