[package]
name = "glowfish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
cozy-chess = { path = "../cozy-chess" }
heapless = "0.7.10"

[build-dependencies]
cozy-chess = { path = "../cozy-chess" }
